2015-11-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLDocument.m: When libxml2 is not enabled, create a
	stub class which will raise an exception on instantiation.

2015-10-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Fix for fastpath code for literal string
	comparison which was ignoring the case insensititve option.
	Problems spotted by Fred, triggered by a Testplant change.

2015-10-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: remove declaration of unused methods.

2015-10-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSocketPortNameServer.m: Fix retain/release error causing
	crash on failure to launch gdomap.

2015-10-05 Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/GNUstepBase/GNUstep.h: Define __has_extension() if the
	compiler does not support it.
	* Headers/Foundation/NSObjCRuntime.h: Provide definitions for
	NS_ENUM and NS_OPTIONS.

2015-10-03  Fred Kiefer <fredkiefer@gmx.de>

	* Source/NSPropertyList.m (GSBinaryPLGenerator-storeCount:): Use
	0x12 instead of 0x13 for integer count.
	* Source/NSPropertyList.m (GSBinaryPLParser-readCountAt:): Handle
	0x12 correctly. Use same code for 0x13 to read old incorrect
	written data.
	Based on change by Josh Freeman <pikopixel@twilightedge.com>

2015-09-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSXMLParser.m:
	* Tests/base/NSXMLParser/ParseData/quoted-entities.result
	* Tests/base/NSXMLParser/ParseData/quoted-entities.xml
	Turn on substitution of entities to match OSX behavior, add tests.

2015-09-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSData.h:
	* Source/Additions/GSObjCRuntime.m:
	* Source/GSFFCallInvocation.m:
	* Source/GSFormat.m:
	* Source/GSValue.m:
	* Source/NSArchiver.m:
	* Source/NSData.m:
	* Source/NSDecimalNumber.m:
	* Source/NSKeyValueObserving.m:
	* Source/NSKeyedArchiver.m:
	* Source/NSKeyedUnarchiver.m:
	* Source/NSMethodSignature.m:
	* Source/NSPortCoder.m:
	* Source/NSUnarchiver.m: